fix: not showing disc of ul

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,6 @@ body {
 
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
   font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
 }
